// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FileContent renders correctly 1`] = `
<div>
  <div />
  <div
    className="file-content"
  >
    <pre
      style={
        Object {
          "backgroundColor": "#fff",
        }
      }
    >
      <code
        style={
          Object {
            "float": "left",
            "paddingRight": "10px",
          }
        }
      >
        <span
          className="react-syntax-highlighter-line-number"
          style={Object {}}
        >
          1

        </span>
        <span
          className="react-syntax-highlighter-line-number"
          style={Object {}}
        >
          2

        </span>
        <span
          className="react-syntax-highlighter-line-number"
          style={Object {}}
        >
          3

        </span>
        <span
          className="react-syntax-highlighter-line-number"
          style={Object {}}
        >
          4

        </span>
        <span
          className="react-syntax-highlighter-line-number"
          style={Object {}}
        >
          5

        </span>
        <span
          className="react-syntax-highlighter-line-number"
          style={Object {}}
        >
          6

        </span>
        <span
          className="react-syntax-highlighter-line-number"
          style={Object {}}
        >
          7

        </span>
        <span
          className="react-syntax-highlighter-line-number"
          style={Object {}}
        >
          8

        </span>
        <span
          className="react-syntax-highlighter-line-number"
          style={Object {}}
        >
          9

        </span>
        <span
          className="react-syntax-highlighter-line-number"
          style={Object {}}
        >
          10

        </span>
        <span
          className="react-syntax-highlighter-line-number"
          style={Object {}}
        >
          11

        </span>
        <span
          className="react-syntax-highlighter-line-number"
          style={Object {}}
        >
          12

        </span>
        <span
          className="react-syntax-highlighter-line-number"
          style={Object {}}
        >
          13

        </span>
        <span
          className="react-syntax-highlighter-line-number"
          style={Object {}}
        >
          14

        </span>
        <span
          className="react-syntax-highlighter-line-number"
          style={Object {}}
        >
          15

        </span>
        <span
          className="react-syntax-highlighter-line-number"
          style={Object {}}
        >
          16

        </span>
        <span
          className="react-syntax-highlighter-line-number"
          style={Object {}}
        >
          17

        </span>
        <span
          className="react-syntax-highlighter-line-number"
          style={Object {}}
        >
          18

        </span>
        <span
          className="react-syntax-highlighter-line-number"
          style={Object {}}
        >
          19

        </span>
        <span
          className="react-syntax-highlighter-line-number"
          style={Object {}}
        >
          20

        </span>
        <span
          className="react-syntax-highlighter-line-number"
          style={Object {}}
        >
          21

        </span>
        <span
          className="react-syntax-highlighter-line-number"
          style={Object {}}
        >
          22

        </span>
        <span
          className="react-syntax-highlighter-line-number"
          style={Object {}}
        >
          23

        </span>
        <span
          className="react-syntax-highlighter-line-number"
          style={Object {}}
        >
          24

        </span>
        <span
          className="react-syntax-highlighter-line-number"
          style={Object {}}
        >
          25

        </span>
        <span
          className="react-syntax-highlighter-line-number"
          style={Object {}}
        >
          26

        </span>
        <span
          className="react-syntax-highlighter-line-number"
          style={Object {}}
        >
          27

        </span>
        <span
          className="react-syntax-highlighter-line-number"
          style={Object {}}
        >
          28

        </span>
        <span
          className="react-syntax-highlighter-line-number"
          style={Object {}}
        >
          29

        </span>
        <span
          className="react-syntax-highlighter-line-number"
          style={Object {}}
        >
          30

        </span>
        <span
          className="react-syntax-highlighter-line-number"
          style={Object {}}
        >
          31

        </span>
        <span
          className="react-syntax-highlighter-line-number"
          style={Object {}}
        >
          32

        </span>
        <span
          className="react-syntax-highlighter-line-number"
          style={Object {}}
        >
          33

        </span>
      </code>
      <code>
        <span
          className="token punctuation"
          style={Object {}}
        >
          {
        </span>
        
  
        <span
          className="token string"
          style={Object {}}
        >
          "hello"
        </span>
        <span
          className="token punctuation"
          style={Object {}}
        >
          :
        </span>
         
        <span
          className="token punctuation"
          style={Object {}}
        >
          [
        </span>
        
    
        <span
          className="token string"
          style={Object {}}
        >
          "Heya! Welcome on my portfolio."
        </span>
        <span
          className="token punctuation"
          style={Object {}}
        >
          ,
        </span>
         
    
        <span
          className="token string"
          style={Object {}}
        >
          "It shows you what I have done and what I can do."
        </span>
        
  
        <span
          className="token punctuation"
          style={Object {}}
        >
          ]
        </span>
        <span
          className="token punctuation"
          style={Object {}}
        >
          ,
        </span>
        
  
        <span
          className="token string"
          style={Object {}}
        >
          "wait-what"
        </span>
        <span
          className="token punctuation"
          style={Object {}}
        >
          :
        </span>
         
        <span
          className="token punctuation"
          style={Object {}}
        >
          [
        </span>
        
    
        <span
          className="token string"
          style={Object {}}
        >
          "Ok, maybe it needs a bit of explanation."
        </span>
        <span
          className="token punctuation"
          style={Object {}}
        >
          ,
        </span>
        
    
        <span
          className="token string"
          style={Object {}}
        >
          "You can use the file explorer on your left to open files"
        </span>
        <span
          className="token punctuation"
          style={Object {}}
        >
          ,
        </span>
        
    
        <span
          className="token string"
          style={Object {}}
        >
          "These describe some of the work I have been doing or what studies I did, etc."
        </span>
        
  
        <span
          className="token punctuation"
          style={Object {}}
        >
          ]
        </span>
        <span
          className="token punctuation"
          style={Object {}}
        >
          ,
        </span>
        
  
        <span
          className="token string"
          style={Object {}}
        >
          "are-you-mad"
        </span>
        <span
          className="token punctuation"
          style={Object {}}
        >
          :
        </span>
         
        <span
          className="token punctuation"
          style={Object {}}
        >
          [
        </span>
        
    
        <span
          className="token string"
          style={Object {}}
        >
          "Hehe, no. I just thought it would be"
        </span>
        <span
          className="token punctuation"
          style={Object {}}
        >
          ,
        </span>
        
    
        <span
          className="token string"
          style={Object {}}
        >
          "an original way to present myself and relevant with my expertise."
        </span>
        
  
        <span
          className="token punctuation"
          style={Object {}}
        >
          ]
        </span>
        <span
          className="token punctuation"
          style={Object {}}
        >
          ,
        </span>
        
  
        <span
          className="token string"
          style={Object {}}
        >
          "aint-nobody-got-time-for-that"
        </span>
        <span
          className="token punctuation"
          style={Object {}}
        >
          :
        </span>
         
        <span
          className="token punctuation"
          style={Object {}}
        >
          [
        </span>
        
    
        <span
          className="token string"
          style={Object {}}
        >
          "Ok if you can't be bothered"
        </span>
        <span
          className="token punctuation"
          style={Object {}}
        >
          ,
        </span>
        
    
        <span
          className="token string"
          style={Object {}}
        >
          "you can download directly my CV in a PDF format"
        </span>
        <span
          className="token punctuation"
          style={Object {}}
        >
          ,
        </span>
        
    
        <span
          className="token string"
          style={Object {}}
        >
          "by clicking on the PDF icon in the menu bar on the left (desktop only)"
        </span>
        <span
          className="token punctuation"
          style={Object {}}
        >
          ,
        </span>
        
    
        <span
          className="token string"
          style={Object {}}
        >
          "or click on the smiley face in the footer bar."
        </span>
        
  
        <span
          className="token punctuation"
          style={Object {}}
        >
          ]
        </span>
        <span
          className="token punctuation"
          style={Object {}}
        >
          ,
        </span>
        
  
        <span
          className="token string"
          style={Object {}}
        >
          "where-is-da-code"
        </span>
        <span
          className="token punctuation"
          style={Object {}}
        >
          :
        </span>
         
        <span
          className="token punctuation"
          style={Object {}}
        >
          [
        </span>
        
    
        <span
          className="token string"
          style={Object {}}
        >
          "Oh by the way, I made the source code open source."
        </span>
        <span
          className="token punctuation"
          style={Object {}}
        >
          ,
        </span>
        
    
        <span
          className="token string"
          style={Object {}}
        >
          "You can see it here:"
        </span>
        <span
          className="token punctuation"
          style={Object {}}
        >
          ,
        </span>
        
    
        <span
          className="token string"
          style={Object {}}
        >
          "https://github.com/vincentaudebert/vatweb"
        </span>
        <span
          className="token punctuation"
          style={Object {}}
        >
          ,
        </span>
        
    
        <span
          className="token string"
          style={Object {}}
        >
          "or click on the git icon in the footer bar."
        </span>
        <span
          className="token punctuation"
          style={Object {}}
        >
          ,
        </span>
        
  
        <span
          className="token punctuation"
          style={Object {}}
        >
          ]
        </span>
        <span
          className="token punctuation"
          style={Object {}}
        >
          ,
        </span>
        
  
        <span
          className="token string"
          style={Object {}}
        >
          "hey-granpa"
        </span>
        <span
          className="token punctuation"
          style={Object {}}
        >
          :
        </span>
         
        <span
          className="token punctuation"
          style={Object {}}
        >
          [
        </span>
        
    
        <span
          className="token string"
          style={Object {}}
        >
          "Yes. I know. This code is fairly old and a bit outdated. Not even using React hooks..."
        </span>
        <span
          className="token punctuation"
          style={Object {}}
        >
          ,
        </span>
        
    
        <span
          className="token string"
          style={Object {}}
        >
          "And it's only from june 2018!"
        </span>
        <span
          className="token punctuation"
          style={Object {}}
        >
          ,
        </span>
        
    
        <span
          className="token string"
          style={Object {}}
        >
          "But it means React is moving fast! So we can't really complain :)"
        </span>
        <span
          className="token punctuation"
          style={Object {}}
        >
          ,
        </span>
        
    
        <span
          className="token string"
          style={Object {}}
        >
          "I will update it ASAP when I get some spare time"
        </span>
        <span
          className="token punctuation"
          style={Object {}}
        >
          ,
        </span>
        
  
        <span
          className="token punctuation"
          style={Object {}}
        >
          ]
        </span>
        

        <span
          className="token punctuation"
          style={Object {}}
        >
          }
        </span>
      </code>
    </pre>
  </div>
</div>
`;

exports[`FileContent renders correctly with undefined file 1`] = `
<div>
  <div />
  <div
    className="file-content"
  >
    <pre
      style={
        Object {
          "backgroundColor": "#fff",
        }
      }
    >
      <code
        style={
          Object {
            "float": "left",
            "paddingRight": "10px",
          }
        }
      >
        <span
          className="react-syntax-highlighter-line-number"
          style={Object {}}
        >
          1

        </span>
      </code>
      <code />
    </pre>
  </div>
</div>
`;
